--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,7 @@ server:
 spring:
   application:
      name: poki
-
-mesos:
-  ip: 172.16.0.5
-
----
-
-spring:
-  profiles: dev
-  mesos:
-    ip: 127.0.0.1
-  
+  mvc:
+    view:
+      prefix: /WEB-INF/pages/
+      suffix: .jsp
