--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,29 @@
 server:
-  port: 8080
+    port: 8080
 
 spring:
-  application:
-     name: poki
-
-mesos:
-  ip: 172.16.0.5
+    application:
+       name: poki
+    jpa:
+        show-sql: false
+        hibernate:
+            ddl-auto: none
+        properties:
+            hibernate:
+                dialect: org.hibernate.dialect.PostgreSQL94Dialect
+    datasource:
+        url: jdbc:postgresql://localhost/fortunesdb
+        username: postgres
+        driverClassName: org.postgresql.Driver
+        data: classpath:/quotes.sql
+        hikari:
+            connection-timeout: 2000
+            maximum-pool-size: 10
 
 ---
 
 spring:
-  profiles: dev
-  mesos:
-    ip: 127.0.0.1
+    profiles: dev
+    jpa:
+        show-sql: true
   
