--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,9 @@ spring:
             ddl-auto: none
         properties:
             hibernate:
-                dialect: org.hibernate.dialect.PostgreSQL94Dialect
+                dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     datasource:
-        url: jdbc:postgresql://localhost/pokemondb
-        username: postgres
-        driverClassName: org.postgresql.Driver
+        driverClassName: com.mysql.jdbc.Driver
         hikari:
             connection-timeout: 2000
             maximum-pool-size: 10
@@ -25,4 +23,8 @@ spring:
     profiles: dev
     jpa:
         show-sql: true
+    datasource:
+        url: jdbc:mysql://localhost/pokemondb
+        username: root
+        password: incorrecta
   
